// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> with and clicks the card feature 1`] = `
<div
  class="card__Group-sc-17xymsf-2 hmzArw"
>
  <div
    class="card__Container-sc-17xymsf-1 fKaQkH"
  >
    <p
      class="card__Title-sc-17xymsf-0 ixZoVl"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-17xymsf-5 jUyfNO"
    >
      <div
        class="card__Item-sc-17xymsf-8 dRKRoz"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-sc-17xymsf-7 fVKyNy"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-17xymsf-6 dNbNme"
        >
          <p
            class="card__SubTitle-sc-17xymsf-3 loCJHx"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-17xymsf-4 bZqRvk"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-17xymsf-1 fKaQkH"
  >
    <p
      class="card__Title-sc-17xymsf-0 ixZoVl"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-17xymsf-5 jUyfNO"
    >
      <div
        class="card__Item-sc-17xymsf-8 dRKRoz"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-sc-17xymsf-7 fVKyNy"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-17xymsf-6 dNbNme"
        >
          <p
            class="card__SubTitle-sc-17xymsf-3 loCJHx"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-17xymsf-4 bZqRvk"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-sc-17xymsf-2 hmzArw"
>
  <div
    class="card__Container-sc-17xymsf-1 fKaQkH"
  >
    <p
      class="card__Title-sc-17xymsf-0 ixZoVl"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-17xymsf-5 jUyfNO"
    >
      <div
        class="card__Item-sc-17xymsf-8 dRKRoz"
      >
        <img
          class="card__Image-sc-17xymsf-7 fVKyNy"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-17xymsf-6 dNbNme"
        >
          <p
            class="card__SubTitle-sc-17xymsf-3 loCJHx"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-17xymsf-4 bZqRvk"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-17xymsf-1 fKaQkH"
  >
    <p
      class="card__Title-sc-17xymsf-0 ixZoVl"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-17xymsf-5 jUyfNO"
    >
      <div
        class="card__Item-sc-17xymsf-8 dRKRoz"
      >
        <img
          class="card__Image-sc-17xymsf-7 fVKyNy"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-17xymsf-6 dNbNme"
        >
          <p
            class="card__SubTitle-sc-17xymsf-3 loCJHx"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-17xymsf-4 bZqRvk"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
